# dos.zone.browser.pc

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  AppXManifest.xml  CMakeLists.txt  README.build.md  README.md  forge.config.ts  index.html  package-lock.json  package.json  vite.main.config.ts
.github/workflows/: linux.yml  macos-arm64.yml  macos.yml  make-mac.yml  windows.yml
flathub/: zone.dos.Browser.desktop  zone.dos.Browser.metainfo.xml
flatpak/: README.md  dos.zone.Browser.metainfo.xml  dos.zone.Browser.yaml  zone.dos.Browser.desktop  zone.dos.Browser.yaml
native/: protocol.cpp  protocol_dyn.cpp  protocol_dyn.h
scripts/: update-emu.sh
src/: config.ts  fs.js  fs.ts  hardware.js  icon.icns  index.js  main.ts  navbar.js  preload.js  preload.ts  runtime.ts
src/app/: doszone-backend  doszone-backend-x  osx-doszone-backend  osx-doszone-backend-x
